--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -2288,6 +2288,80 @@ show elevation as:</property>
                     <property name="position">0</property>
                   </packing>
                 </child>
+                <child>
+                  <widget class="GtkHBox" id="hbox2">
+                    <property name="visible">True</property>
+                    <property name="spacing">10</property>
+                    <child>
+                      <widget class="GtkCheckButton" id="checkbutton_video">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">False</property>
+                        <property name="relief">none</property>
+                        <property name="active">True</property>
+                        <property name="draw_indicator">False</property>
+                        <signal name="clicked" handler="on_checkbutton_video_clicked"/>
+                        <child>
+                          <widget class="GtkAlignment" id="alignment2">
+                            <property name="visible">True</property>
+                            <property name="xscale">0</property>
+                            <property name="yscale">0</property>
+                            <child>
+                              <widget class="GtkHBox" id="hbox3">
+                                <property name="visible">True</property>
+                                <property name="spacing">2</property>
+                                <child>
+                                  <widget class="GtkImage" id="image_video_yes">
+                                    <property name="width_request">24</property>
+                                    <property name="height_request">24</property>
+                                    <property name="visible">True</property>
+                                    <property name="stock">gtk-media-record</property>
+                                  </widget>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">False</property>
+                                    <property name="position">0</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <widget class="GtkImage" id="image_video_no">
+                                    <property name="width_request">24</property>
+                                    <property name="height_request">24</property>
+                                    <property name="visible">True</property>
+                                    <property name="stock">gtk-no</property>
+                                  </widget>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">False</property>
+                                    <property name="position">1</property>
+                                  </packing>
+                                </child>
+                              </widget>
+                            </child>
+                          </widget>
+                        </child>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkLabel" id="label_video">
+                        <property name="visible">True</property>
+                        <property name="xalign">0</property>
+                      </widget>
+                      <packing>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                  </widget>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
               </widget>
               <packing>
                 <property name="position">2</property>
@@ -5490,7 +5564,7 @@ suitable for agility tests)</property>
                   </widget>
                 </child>
                 <child>
-                  <widget class="GtkLabel" id="label515">
+                  <widget class="GtkLabel" id="label_detection">
                     <property name="visible">True</property>
                     <property name="label" translatable="yes">&lt;b&gt;Detection&lt;/b&gt;</property>
                     <property name="use_markup">True</property>
@@ -13693,6 +13767,7 @@ by you</property>
                                                     <property name="label" translatable="yes">Current person</property>
                                                     <property name="use_markup">True</property>
                                                     <property name="ellipsize">end</property>
+                                                    <property name="max_width_chars">25</property>
                                                   </widget>
                                                   <packing>
                                                     <property name="expand">False</property>
@@ -13914,7 +13989,7 @@ by you</property>
                           <widget class="GtkViewport" id="viewport_mode">
                             <property name="visible">True</property>
                             <property name="resize_mode">queue</property>
-                            <property name="hadjustment">0 0 744 74.400000000000006 669.60000000000002 744</property>
+                            <property name="hadjustment">0 0 1 0.10000000000000001 0.90000000000000002 1</property>
                             <property name="shadow_type">out</property>
                             <child>
                               <widget class="GtkHButtonBox" id="hbutton_radio_modes">
@@ -17845,6 +17920,7 @@ Second Chronopic to platforms.</property>
                                                     <property name="width_request">225</property>
                                                     <property name="height_request">72</property>
                                                     <property name="visible">True</property>
+                                                    <property name="show_tabs">False</property>
                                                     <property name="show_border">False</property>
                                                     <child>
                                                       <widget class="GtkTable" id="table3">
@@ -23363,6 +23439,34 @@ Evaluator can use real name or nickname.</property>
           </packing>
         </child>
         <child>
+          <widget class="GtkFrame" id="frame3">
+            <property name="visible">True</property>
+            <property name="label_xalign">0</property>
+            <property name="shadow_type">none</property>
+            <child>
+              <widget class="GtkTextView" id="textview_ports_found">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="editable">False</property>
+                <property name="cursor_visible">False</property>
+              </widget>
+            </child>
+            <child>
+              <widget class="GtkLabel" id="label4">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">&lt;b&gt;Chronopic is on one of this ports&lt;/b&gt;</property>
+                <property name="use_markup">True</property>
+              </widget>
+              <packing>
+                <property name="type">label_item</property>
+              </packing>
+            </child>
+          </widget>
+          <packing>
+            <property name="position">3</property>
+          </packing>
+        </child>
+        <child>
           <widget class="GtkHButtonBox" id="hbuttonbox1">
             <property name="visible">True</property>
             <property name="layout_style">spread</property>
@@ -23398,7 +23502,7 @@ Evaluator can use real name or nickname.</property>
             </child>
           </widget>
           <packing>
-            <property name="position">3</property>
+            <property name="position">4</property>
           </packing>
         </child>
       </widget>
